force-app/main/default/objects/vlocity_cmt__SpecTemplateMapping__c/vlocity_cmt__SpecTemplateMapping__c.object-meta.xml
<CustomObject>
    <label>Spec Template Mapping</label>
    <nameField>
        <label>Spec Template Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Spec Template Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>