force-app/main/default/objects/vlocity_cmt__SpecTemplateMapping__c/fields/vlocity_cmt__GlobalKey__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__GlobalKey__c</fullName>
    <description>Spec Template Mapping globally unique identifier which is used across Salesforce orgs and potentially within other systems. Any globally unique identifier can be used when migrated from other initiating systems.</description>
    <externalId>true</externalId>
    <label>Global Key</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>