force-app/main/default/objects/vlocity_cmt__SpecTemplateMapping__c/fields/vlocity_cmt__TemplateProductId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__TemplateProductId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Represents a template product imported from a technical, rating or billing engine catalog.</description>
    <inlineHelpText>Represents a template product imported from a technical, rating or billing engine catalog.</inlineHelpText>
    <label>Spec Template</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Spec Template Mappings (Spec Template)</relationshipLabel>
    <relationshipName>SpecTemplateMappings</relationshipName>
    <type>Lookup</type>
</CustomField>